[gd_scene load_steps=5 format=3 uid="uid://dms0cyovsrf0u"]

[ext_resource type="Script" path="res://scripts/menu/stats_page.gd" id="1_nvmvd"]
[ext_resource type="Texture2D" uid="uid://cyto54jbu65c5" path="res://assets/textures/NightSkyHDRI002_1K-TONEMAPPED.jpg" id="1_tffcu"]
[ext_resource type="SystemFont" uid="uid://bk67ajip613n8" path="res://assets/fonts/btn_impact.tres" id="2_2w7am"]

[sub_resource type="SystemFont" id="SystemFont_nno6k"]
font_names = PackedStringArray("Impact")

[node name="StatsPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nvmvd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tffcu")
flip_h = true
flip_v = true

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxTitle" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="TextureRect/MarginContainer/VBoxTitle"]
layout_mode = 2

[node name="PageTitle" type="Label" parent="TextureRect/MarginContainer/VBoxTitle"]
layout_mode = 2
theme_override_colors/font_color = Color(0.667552, 0.292264, 0.999986, 1)
theme_override_colors/font_shadow_color = Color(0.370364, 0.370364, 0.370364, 1)
theme_override_colors/font_outline_color = Color(0.991164, 0.991164, 0.991164, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = SubResource("SystemFont_nno6k")
theme_override_font_sizes/font_size = 40
text = "Game Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxButtons" type="HBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxButtons"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxButtons/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AttemptsLabel" type="Label" parent="TextureRect/MarginContainer/HBoxButtons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(264, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2w7am")
theme_override_font_sizes/font_size = 40
text = "Mission Attempts: "

[node name="VSeparator" type="VSeparator" parent="TextureRect/MarginContainer/HBoxButtons/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AttemptsValue" type="Label" parent="TextureRect/MarginContainer/HBoxButtons/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(264, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2w7am")
theme_override_font_sizes/font_size = 40
text = "0"

[node name="BackHBox" type="HBoxContainer" parent="TextureRect/MarginContainer/HBoxButtons/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackToMain" type="Button" parent="TextureRect/MarginContainer/HBoxButtons/VBoxContainer/BackHBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2w7am")
theme_override_font_sizes/font_size = 35
text = "Back to Main"

[connection signal="pressed" from="TextureRect/MarginContainer/HBoxButtons/VBoxContainer/BackHBox/BackToMain" to="." method="_on_back_to_main_pressed"]
